fix: adjust margin for better alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,7 +147,7 @@ a {
     letter-spacing: 1px;
     text-align: center;
     padding: 15px;
-    margin-bottom: -5;
+    margin-bottom: 1px;
 }
 
 .hero-section-wrapper h1 {
